samples/_failures_safe/1761002131_176f17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c58e4b6.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1c58e4b6.c:165:9: error: expected declaration or statement at end of input
  165 |         }
      |         ^
./samples/SAFE/__tmp_1c58e4b6.c:165:9: error: expected declaration or statement at end of input
